fix spacing in contributors section and in speech bubble

--- a/style/main.css
+++ b/style/main.css
@@ -84,8 +84,8 @@ ul {
 }
 
 #quote-text {
-  margin-top: 45px;
-  margin-bottom: 45px;
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
 
 .switch-container {
