--- a/style/sass/_content.scss
+++ b/style/sass/_content.scss
@@ -50,8 +50,8 @@ ul {
 }
 
 #quote-text {
-  margin-top: 45px;
-  margin-bottom: 45px;
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
 
 .switch-container {
